<resources>
    <string name="app_name">ASG KÜT</string>
    <string name="user_name">Kullancı Adı</string>
    <string name="password">Şifre</string>
    <string name="adding_page">Ekleme Sayfası</string>
    <string name="list_page">Raporlar</string>
    <string name="log_in">Giriş Yap</string>
    <string name="profile">Profil</string>
    <string name="add_operator">Operatör Ekle</string>
    <string name="add_operator_name">Operatör İsmi</string>
    <string name="add_model">Model Ekle</string>
    <string name="add_model_name">Model İsmi</string>
    <string name="add_model_color">Model Rengi</string>
    <string name="add_operatation">Operasyon Ekle</string>
    <string name="add_operatation_name">Operasyon İsmi</string>
    <string name="add_personnel_user_name">Kalite Kontrol Personeli Kullanıcı Adı</string>
    <string name="add_personnel_name">Kalite Kontrol Personeli İsim Soyisim</string>
    <string name="add_personnel">Kalite Kontrol Personeli Ekle</string>
    <string name="add_personnel_password">Kalite Kontrol Personeli Şifresi</string>
    <string name="add_personnel_password_check">Kalite Kontrol Personeli Şifresi Tekrar</string>
    <string name="model_name">Model Adı</string>
    <string name="number_of_checked_jobs">Kontrol Edilen İş Sayısı</string>
    <string name="number_of_errors">Hatalı İş Sayısı</string>
    <string name="add_report">Rapor Ekle</string>
    <string name="apply">Uygula</string>
    <string name="sign_out">Çıkış Yap</string>
    <string name="to_do_work">Yapılması Gereken İş Sayısı</string>
    <string name="done_works">Yapılan İş Sayısı</string>
    <string name="add_error_report">Hata Raporu Ekle</string>
    <string name="add_total_report">Toplam İş Raporu Ekle</string>
    <string name="error_reports">Hata Raporları</string>
    <string name="total_reports">Toplam İş Raporları</string>
    <string name="which_hour">Kaçıncı Saat</string>
    <string name="operator_salary">Operatör Maaşı</string>
    <string-array name="which_hour">
            <item>1.Saat</item>
            <item>2.Saat</item>
            <item>3.Saat</item>
            <item>4.Saat</item>
            <item>5.Saat</item>
            <item>6.Saat</item>
            <item>7.Saat</item>
            <item>8.Saat</item>
            <item>9.Saat</item>
            <item>10.Saat</item>
            <item>Geçmiş Doldurma</item>
        </string-array>
</resources>