<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">


            <TextView
                android:id="@+id/txt_add_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="Ekleme Sayfası"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/edt_add_opperator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/add_operator_name"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintBottom_toTopOf="@id/btn_add_operator"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_add_page" />

            <EditText
                android:inputType="number"
                android:id="@+id/edt_add_opperator_salary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/operator_salary"
                app:layout_constraintBottom_toTopOf="@id/btn_add_operator"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/txt_add_page" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_operator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/add_operator"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@id/edt_add_opperator_salary"
                app:layout_constraintStart_toStartOf="@id/edt_add_opperator"
                app:layout_constraintTop_toBottomOf="@id/edt_add_opperator" />


            <EditText
                android:id="@+id/edt_add_model_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/add_model_name"
                app:layout_constraintEnd_toEndOf="@id/edt_add_opperator_salary"
                app:layout_constraintStart_toStartOf="@id/edt_add_opperator"
                app:layout_constraintTop_toBottomOf="@id/btn_add_operator" />

            <EditText
                android:id="@+id/edt_add_model_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/add_model_color"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/edt_add_opperator"
                app:layout_constraintStart_toStartOf="@id/edt_add_opperator"
                app:layout_constraintTop_toBottomOf="@id/edt_add_model_name" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/add_model"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@id/edt_add_opperator_salary"
                app:layout_constraintStart_toStartOf="@id/edt_add_opperator"
                app:layout_constraintTop_toBottomOf="@id/edt_add_model_color" />

            <EditText
                android:id="@+id/edt_add_operatation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:layout_marginBottom="16dp"
                android:hint="@string/add_operatation_name"
                app:layout_constraintEnd_toEndOf="@id/edt_add_opperator_salary"
                app:layout_constraintStart_toStartOf="@id/edt_add_opperator"
                app:layout_constraintTop_toBottomOf="@id/btn_add_model" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_operatation"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/add_operatation"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@id/edt_add_opperator_salary"
                app:layout_constraintStart_toStartOf="@id/edt_add_opperator"
                app:layout_constraintTop_toBottomOf="@id/edt_add_operatation" />

            <EditText
                android:id="@+id/edt_add_personnel_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/add_personnel_name"
                app:layout_constraintEnd_toEndOf="@id/edt_add_opperator_salary"
                app:layout_constraintStart_toStartOf="@id/edt_add_opperator"
                app:layout_constraintTop_toBottomOf="@id/btn_add_operatation" />

            <EditText
                android:id="@+id/edt_add_personel_user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/add_personnel_user_name"
                app:layout_constraintEnd_toEndOf="@id/edt_add_opperator_salary"
                app:layout_constraintStart_toStartOf="@id/edt_add_opperator"
                app:layout_constraintTop_toBottomOf="@id/edt_add_personnel_name" />

            <EditText
                android:id="@+id/edt_add_personel_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/add_personnel_password"
                app:layout_constraintEnd_toEndOf="@id/edt_add_opperator_salary"
                app:layout_constraintStart_toStartOf="@id/edt_add_opperator"
                app:layout_constraintTop_toBottomOf="@id/edt_add_personel_user_name" />

            <EditText
                android:id="@+id/edt_add_personel_password_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/add_personnel_password_check"
                app:layout_constraintEnd_toEndOf="@id/edt_add_opperator_salary"
                app:layout_constraintStart_toStartOf="@id/edt_add_opperator"
                app:layout_constraintTop_toBottomOf="@id/edt_add_personel_password" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_personel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/add_personnel"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/edt_add_opperator_salary"
                app:layout_constraintStart_toStartOf="@id/edt_add_opperator"
                app:layout_constraintTop_toBottomOf="@id/edt_add_personel_password_check" />

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="vertical"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</layout>