<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_margin="50dp"
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/autotext_model_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:completionThreshold="1"
            android:hint="@string/model_name"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintVertical_bias="0.1" />

        <AutoCompleteTextView
            android:id="@+id/autotext_operatation_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:completionThreshold="1"
            android:hint="@string/add_operatation_name"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/autotext_model_name" />

        <AutoCompleteTextView
            android:id="@+id/autotext_operators_name"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:completionThreshold="1"
            android:hint="@string/add_operator_name"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/autotext_operatation_name" />

        <EditText
            android:id="@+id/edt_checked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:completionThreshold="1"
            android:hint="@string/number_of_checked_jobs"
            android:inputType="numberDecimal"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/autotext_operators_name" />

        <EditText
            android:id="@+id/edt_errors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:completionThreshold="1"
            android:hint="@string/number_of_errors"
            android:inputType="number"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_checked" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_error_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_error_report"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/edt_errors"
            app:layout_constraintStart_toStartOf="@id/edt_errors"
            app:layout_constraintTop_toBottomOf="@id/edt_errors" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>